<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip">
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <TextView 
        android:text="@string/post_as"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="14sp"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="20dp"  
		android:orientation="horizontal">
		
    	<RadioButton 
        	android:id="@+id/storyRadioButton"
        	android:checked="true"
        	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/stories_label"
	        android:layout_marginTop="10dp"
	        android:textSize="12sp"
	        android:paddingRight="4dp"
	        android:layout_marginLeft="4dp"/>
    
    	<RadioButton 
        	android:id="@+id/questionRadioButton"
        	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/questions_label"
	        android:layout_marginTop="10dp"
	        android:textSize="12sp"/>
    
    	<RadioButton 
        	android:id="@+id/shoutRadioButton"
        	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/shout_label"
	        android:layout_marginTop="10dp"
	        android:textSize="12sp"/>
    	
    </LinearLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/title"
        android:ems="10" />

     <requestFocus />
      <EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minHeight="150dp"
        android:gravity="top"
        android:hint="@string/body"
        android:ems="10" />
    
      
      <CheckBox
          android:id="@+id/anon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="@string/anon"/>

      <Button
        android:id="@+id/submit_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/btn_submit"  />
      
      <Button
        android:id="@+id/cancel_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/btn_cancel"   />

        <requestFocus />
</LinearLayout>
    
</ScrollView>